removed region filter
also added some comments and fixed error